# routie

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  file::memory:  pyproject.toml
.github/workflows/: ci.yml
.hermes/plans/: frontend-osm-plan.md  routie-roadmap.md
config/: graphhopper.yml  valhalla.json
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: MapView.svelte  RouteDetails.svelte  RouteForm.svelte
scripts/: docker-entrypoint.sh  download-osm.sh  download_osm.sh  setup_valhalla.sh
src/routie/: __init__.py  config.py  main.py
src/routie/domain/: __init__.py  enums.py  models.py  value_objects.py
src/routie/infrastructure/: __init__.py  database.py  in_memory_repo.py  orm.py  repository.py
src/routie/service/: __init__.py
src/routie/service/providers/: __init__.py  base.py  graphhopper.py  mock.py  polyline.py  valhalla.py
src/routie/use_cases/: __init__.py  manage_profile.py  plan_route.py
src/routie/web/: __init__.py  api.py  schemas.py
tests/: __init__.py
tests/domain/: test_enums.py  test_models.py  test_value_objects.py
tests/infrastructure/: test_in_memory_repo.py  test_sql_repo.py
tests/service/: test_graphhopper_provider.py  test_mock_provider.py  test_polyline.py  test_valhalla_provider.py
tests/use_cases/: test_use_cases.py
tests/web/: __init__.py  test_api.py  test_frontend.py
