[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "routie"
version = "0.1.0"
description = "Route planning for runners and cyclists"
requires-python = ">=3.12"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
]
db = [
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]
all = [
    "routie[dev,web,db]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py313"
